2016-07-02  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* minor changes
	
2016-07-02  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* fixed some bugs related to server replies

2016-06-11  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* improved Cipher Suites evaluation

2016-06-11  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* realigned Cipher Suites evaluations with Mozilla specs

2016-06-11  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* improved ChaCha20-Poly1305 Cipher Suites support

2015-10-09  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* minor bugfix

2015-10-07  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* minor bugfix
	* added support for some old cipher suites

2015-10-06  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* fixed some threads-related bugs

2015-10-05  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* fixed some bugs

2015-10-04  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* added support for elliptic_curves and ec_point_formats TLS Extensions

2015-10-03  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* reorganized ClientHello generation procedure
	* added support for server_name TLS Extension
	* added ChaCha Cipher Suites support

2015-09-26  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* basic multi-thread support (enabled by default)
	* fixed nasty memory bug

2015-09-20  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* SSL3 support
	* TLS1.3 (draft) support
	* improved CS loading function
	* corrected TLS_EMPTY_RENEGOTIATION_INFO_SCSV and TLS_FALLBACK_SCSV handling

2015-09-13  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Fixed cs_eval.dat
	
2015-09-13  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Changed color codes
	* Quiet mode
	* Updated README

2015-09-12  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Updated cs_eval.dat with one generated with last openssl version
	* Added unknown security category
	